@@ -364,15 +364,6 @@ g_object_connect (G_OBJECT (greeter), "quit", G_CALLBACK (quit_cb), NULL);
 @Returns: 
 
 
-<!-- ##### FUNCTION ldm_greeter_get_is_first ##### -->
-<para>
-
-</para>
-
-@greeter: 
-@Returns: 
-
-
 <!-- ##### FUNCTION ldm_greeter_get_default_session ##### -->
 <para>
 
